Prepare geoclimate repository

--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -28,5 +28,15 @@
             <groupId>org.orbisgis</groupId>
             <artifactId>process-manager</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
