--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,19 @@
                 <artifactId>process-manager</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <!-- Test dependencies -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>1.2.3</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.3</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
