--- a/prepare_data/pom.xml
+++ b/prepare_data/pom.xml
@@ -23,6 +23,16 @@
             <groupId>org.orbisgis</groupId>
             <artifactId>data-manager</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
