Create the class prepare data

--- a/prepare_data/pom.xml
+++ b/prepare_data/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>data-manager</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.orbisgis</groupId>
+            <artifactId>process-manager</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <scope>test</scope>
