--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <maven.compiler.source>8</maven.compiler.source>
         <buildNumber>${maven.build.timestamp}</buildNumber>
+        <site.basedir>${project.basedir}</site.basedir>
     </properties>
 
     <!-- Dependencies -->
