--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <organization>UBS, Lab-STICC UMR 6285</organization>
         </developer>
         <developer>
+            <name>Elisabeth Le Saux Wiederhold</name>
+            <organization>UBS, Lab-STICC UMR 6285</organization>
+        </developer>
+        <developer>
             <name>Sylvain Palominos</name>
             <organization>UBS, Lab-STICC UMR 6285</organization>
         </developer>
