--- a/prepare_data/pom.xml
+++ b/prepare_data/pom.xml
@@ -38,6 +38,10 @@
             <groupId>org.orbisgis</groupId>
             <artifactId>process-manager</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.slf4j</groupId>
