--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>geoindicators</module>
         <module>prepare_data</module>
+	<module>processing_chain</module>
     </modules>
 
     <properties>
