Force the snapshot update on each build.

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
             <url>http://nexus-ng.orbisgis.org/repository/orbisgis-snapshot</url>
             <snapshots>
                 <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
             </snapshots>
             <releases>
                 <enabled>false</enabled>
