--- a/processing-chain/pom.xml
+++ b/processing-chain/pom.xml
@@ -16,7 +16,7 @@
         <site.basedir>${project.parent.basedir}</site.basedir>
     </properties>
 
-    <artifactId>processing_chain</artifactId>
+    <artifactId>processing-chain</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -38,16 +38,16 @@
             <groupId>org.orbisgis</groupId>
             <artifactId>process-manager</artifactId>
         </dependency>
-        <!-- Test dependencies -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.orbisgis</groupId>
             <artifactId>prepare_data</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
         </dependency>
     </dependencies>
 
