Rename processing-chain module to processing_chain module

--- a/processing_chain/pom.xml
+++ b/processing_chain/pom.xml
@@ -16,7 +16,7 @@
         <site.basedir>${project.parent.basedir}</site.basedir>
     </properties>
 
-    <artifactId>processing-chain</artifactId>
+    <artifactId>processing_chain</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
