--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 createOSMBuildingTable.sql
 createOSMRoadTable.sql
 geoclimate_bdtopo_data_test
-
+myh2gisbdtopodb.mv.db
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
