Improve block processing Now it uses graph technique to cluster the geometries. It consumes less memory and it's faster than the previous method

--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -39,6 +39,11 @@
             <groupId>org.orbisgis</groupId>
             <artifactId>process-manager</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.orbisgis</groupId>
+            <artifactId>h2gis-network</artifactId>
+            <version>1.5.0</version>
+        </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.slf4j</groupId>
