--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.orbisgis</groupId>
             <artifactId>h2gis-network</artifactId>
-            <version>1.5.0</version>
+            <version>2.0.0-20190705.044234-66</version>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
