--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
                 <artifactId>process-manager</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.orbisgis</groupId>
+                <artifactId>osm</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
