--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -39,17 +39,17 @@
             <artifactId>process-manager</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisprocess</groupId>
+            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
             <artifactId>preparedata</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisprocess</groupId>
+            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
             <artifactId>geoindicators</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisprocess</groupId>
+            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
             <artifactId>processingchain</artifactId>
             <version>${project.version}</version>
         </dependency>
