Improve GIS layers when the geometry share a border with the enveloppe of the extracted area

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=1024m -da</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
