--- a/pom.xml
+++ b/pom.xml
@@ -67,14 +67,14 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.orbisgis</groupId>
-                <artifactId>data-manager</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <groupId>org.orbisgis.orbisdata.datamanager</groupId>
+                <artifactId>jdbc</artifactId>
+                <version>1.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>org.orbisgis</groupId>
-                <artifactId>process-manager</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <groupId>org.orbisgis.orbisdata.processmanager</groupId>
+                <artifactId>process</artifactId>
+                <version>1.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.orbisgis</groupId>
