--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
                 <artifactId>osm</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.orbisgis.orbisdata.datamanager</groupId>
+                <artifactId>dataframe</artifactId>
+                <version>1.0.1-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
