--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.orbisgis.orbisprocess</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>1.0.0-RC1</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
     <artifactId>geoindicators</artifactId>
