--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -34,6 +34,14 @@
             <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
             <artifactId>processingchain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
+            <artifactId>bdtopo_v2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.orbisgis.geoclimate</groupId>
+            <artifactId>osm</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
