--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -39,7 +39,7 @@
             <artifactId>bdtopo_v2</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.geoclimate</groupId>
+            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
             <artifactId>osm</artifactId>
         </dependency>
     </dependencies>
