--- a/osm/pom.xml
+++ b/osm/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>osm</artifactId>
-
     <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
