--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,15 @@ jdk:
   - oraclejdk8
   - openjdk8
 
+addons:
+  postgresql: 9.6
+  apt:
+    packages:
+      - postgresql-9.6-postgis-2.4
+before_script:
+  - psql -U postgres -c "CREATE USER orbisgis WITH PASSWORD 'orbisgis';"
+  - psql -U postgres -c "CREATE DATABASE orbisgis_db;"
+  - psql -U postgres -c "GRANT ALL PRIVILEGES ON DATABASE orbisgis_db TO orbisgis;"
+  - psql -U postgres -d orbisgis_db -c "CREATE EXTENSION postgis;"
+
 script: mvn dependency:purge-local-repository clean install
