Prepare enrich building type

--- a/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
+++ b/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
@@ -15,7 +15,7 @@
                 "residential"
             ]
         },
-        "retail": {
+        "commercial": {
             "landuse": [
                 "retail"
             ]
