--- a/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
+++ b/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
@@ -7,17 +7,13 @@
     "type": {
         "commercial": {
             "landuse": [
-                "commercial"
+                "commercial",
+                "retail"
             ]
         },
         "residential": {
             "landuse": [
                 "residential"
-            ]
-        },
-        "commercial": {
-            "landuse": [
-                "retail"
             ]
         },
         "industrial": {
