--- a/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
+++ b/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
@@ -7,13 +7,17 @@
     "type": {
         "commercial": {
             "landuse": [
-                "commercial",
-                "retail"
+                "commercial"
             ]
         },
         "residential": {
             "landuse": [
                 "residential"
+            ]
+        },
+        "commercial": {
+            "landuse": [
+                "retail"
             ]
         },
         "industrial": {
