--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -101,6 +101,11 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.orbisgis.orbisprocess.geoclimate.Geoclimate</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
