Extract heavy and light industry from OSM. Add new building types : heavy_industry and light_industry Prepare BDTopo to find the industry types

--- a/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
+++ b/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
@@ -2,8 +2,7 @@
     "landuse":["commercial", "residential", "retail", "industrial"]
 
 },
-    "columns":[ "landuse"
-    ],
+    "columns":[ "landuse","industrial"],
     "type": {
         "commercial": {
             "landuse": [
@@ -16,7 +15,12 @@
                 "residential"
             ]
         },
-        "industrial": {
+        "heavy_industry:industria": {
+            "industrial": [
+                "refinery"
+            ]
+        },
+        "light_industry:industrial": {
             "landuse": [
                 "industrial"
             ]
