Better type and use detection for OSM building

--- a/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
+++ b/osm/src/main/resources/org/orbisgis/orbisprocess/geoclimate/osm/urbanAreasParams.json
@@ -15,7 +15,7 @@
                 "residential"
             ]
         },
-        "heavy_industry:industria": {
+        "heavy_industry:industrial": {
             "industrial": [
                 "refinery"
             ]
