--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -31,14 +31,17 @@
         <dependency>
             <groupId>org.orbisgis.orbisdata.datamanager</groupId>
             <artifactId>jdbc</artifactId>
+            <version>1.0.1-RC1</version>
         </dependency>
         <dependency>
             <groupId>org.orbisgis.orbisdata.processmanager</groupId>
             <artifactId>process</artifactId>
+            <version>1.0.1-RC1</version>
         </dependency>
         <dependency>
             <groupId>org.orbisgis.orbisdata.datamanager</groupId>
             <artifactId>dataframe</artifactId>
+            <version>1.0.1-RC1</version>
         </dependency>
         <dependency>
             <groupId>org.orbisgis</groupId>
