--- a/processingchain/pom.xml
+++ b/processingchain/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>org.orbisgis.orbisdata.datamanager</groupId>
             <artifactId>jdbc</artifactId>
+            <version>1.0.1-RC1</version>
         </dependency>
         <dependency>
             <groupId>org.orbisgis.orbisdata.processmanager</groupId>
