--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
             <organization>CNRS, Lab-STICC UMR 6285</organization>
         </developer>
         <developer>
+            <name>Elisabeth  Le Saux Wiederhold</name>
+            <organization>CNRS, Lab-STICC UMR 6285</organization>
+        </developer>
+        <developer>
             <name>Jonathan Lao</name>
             <organization>UBS, Lab-STICC UMR 6285</organization>
         </developer>
