Some potential fixes.

--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
     <groupId>org.orbisgis.orbisprocess</groupId>
     <artifactId>geoclimate-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-RC1</version>
     <modules>
         <module>geoindicators</module>
-        <module>bdtopo_v2</module>
         <module>processingchain</module>
-        <module>geoclimate</module>
+        <module>bdtopo_v2</module>
         <module>osm</module>
+        <module>geoclimate</module>
     </modules>
 
     <properties>
