--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -7,10 +7,11 @@
     <parent>
         <groupId>org.orbisgis.orbisprocess</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-RC1</version>
     </parent>
     <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
     <artifactId>geoindicators</artifactId>
+    <version>1.0.1-RC1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,6 +32,11 @@
         <dependency>
             <groupId>org.orbisgis.orbisdata.datamanager</groupId>
             <artifactId>jdbc</artifactId>
+            <version>1.0.1-RC1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.orbisgis.orbisdata.datamanager</groupId>
+            <artifactId>api</artifactId>
             <version>1.0.1-RC1</version>
         </dependency>
         <dependency>
