--- a/processingchain/pom.xml
+++ b/processingchain/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.orbisgis.orbisprocess</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-RC1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,6 +18,7 @@
 
     <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
     <artifactId>processingchain</artifactId>
+    <version>1.0.1-RC1</version>
     <dependencies>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -31,10 +32,12 @@
         <dependency>
             <groupId>org.orbisgis.orbisdata.processmanager</groupId>
             <artifactId>process</artifactId>
+            <version>1.0.1-RC1</version>
         </dependency>
         <dependency>
             <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
             <artifactId>geoindicators</artifactId>
+            <version>1.0.1-RC1</version>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
