--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.orbisgis.orbisprocess</groupId>
+        <groupId>org.orbisgis.geoclimate</groupId>
         <artifactId>geoclimate-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
@@ -32,11 +32,11 @@
             <artifactId>geoindicators</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
+            <groupId>org.orbisgis.geoclimate</groupId>
             <artifactId>bdtopo_v2</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
+            <groupId>org.orbisgis.geoclimate</groupId>
             <artifactId>osm</artifactId>
         </dependency>
         <dependency>
