--- a/osm/pom.xml
+++ b/osm/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>osm</artifactId>
-    <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
+    <groupId>org.orbisgis.geoclimate</groupId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
