--- a/osm/pom.xml
+++ b/osm/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>geoclimate-parent</artifactId>
-        <groupId>org.orbisgis.orbisprocess</groupId>
+        <groupId>org.orbisgis.geoclimate</groupId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
