Create the GeoClimate archive

--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -112,6 +112,8 @@
                             <mainClass>org.orbisgis.geoclimate.Geoclimate</mainClass>
                         </manifest>
                     </archive>
+                    <finalName>${project.build.finalName}</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
             </plugin>
         </plugins>
