--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -5,19 +5,17 @@
     <parent>
         <groupId>org.orbisgis.geoclimate</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>geoclimate</artifactId>
+    <version>0.0.2-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.build.timestamp.format>YYYY-MM-dd-hh-mm-ss</maven.build.timestamp.format>
-        <buildNumber>${maven.build.timestamp}</buildNumber>
-        <site.basedir>${project.parent.basedir}</site.basedir>
     </properties>
 
-    <artifactId>geoclimate</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
