Update with OrbisData Start to fix bad use of GString

--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <smile-version>2.5.3</smile-version>
     </properties>
 
     <dependencies>
@@ -74,6 +75,7 @@
         <dependency>
             <groupId>com.github.haifengl</groupId>
             <artifactId>smile-core</artifactId>
+            <version>${smile-version}</version>
         </dependency>
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
@@ -83,6 +85,7 @@
         <dependency>
             <groupId>com.github.haifengl</groupId>
             <artifactId>smile-data</artifactId>
+            <version>${smile-version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
