First step of a new module to extract data from https://www.worldpop.org

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>osm</module>
         <module>geoclimate</module>
         <module>osmtools</module>
+        <module>worldpoptools</module>
     </modules>
 
     <properties>
