--- a/osm/pom.xml
+++ b/osm/pom.xml
@@ -20,6 +20,16 @@
     <dependencies>
         <dependency>
             <groupId>org.orbisgis.geoclimate</groupId>
+            <artifactId>worldpoptools</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.orbisgis.geoclimate</groupId>
             <artifactId>osmtools</artifactId>
             <exclusions>
                 <exclusion>
