Move population indicator in BuildingIndicators.groovy Add method to sum the population in a grid Add population indicator on BDTopo workflow

--- a/bdtopo_v2/pom.xml
+++ b/bdtopo_v2/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>geoindicators</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.orbisgis.geoclimate</groupId>
+            <artifactId>worldpoptools</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
